[package]
name = "dicecloud_sheet_printer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genpdf = {version="0.2.0",features=["images","hyphenation"]}
reqwest= {version="0.11.12",features=["json"]}
futures= "0.3.5"
serde_json = "1.0"
tokio = {version="1.21.2",features = ["macros","rt-multi-thread"]}
owned_chars = "0.3.2"
textwrap = {version="0.16.0", features=["hyphenation"]}