[package]
name = "dicecloud_sheet_printer"
version = "0.2.0"
edition = "2021"
authors = ["Gregory Hess <gregory.w.hess@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool for printing a 5e character off of dicecloud v2"
readme = "README.md"
homepage = "https://github.com/gregovin/dicecloud_sheet_printer"
repository = "https://github.com/gregovin/dicecloud_sheet_printer"
keywords = ["cli", "dcv2", "printing","api"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genpdf = {version="0.2.0",features=["images","hyphenation"]}
reqwest= {version="0.11.12",features=["json"]}
futures= "0.3.5"
serde_json = "1.0"
tokio = {version="1.21.2",features = ["macros","rt-multi-thread"]}
owned_chars = "0.3.2"
textwrap = {version="0.16.0", features=["hyphenation"]}
serde = { version = "1.0", optional = true }
itertools = "0.10.5"
regex = "1.7.0"
image = "0.23.14"